<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.50"
    android:orientation="vertical"
    android:background="@color/colorGold">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/tellsJoke_1"
        android:textColor="@color/colorGrey"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/dog_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/SureButton"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:background="@drawable/button_config"
            android:text="@string/sureStr"
            android:textStyle="bold"
            android:onClick="continueJokeMessage"/>

        <Button
            android:id="@+id/NopeButton"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:background="@drawable/button_config"
            android:text="@string/nopeStr"
            android:textStyle="bold"
            android:onClick="fireToastMesage"/>

    </LinearLayout>

</LinearLayout>
