<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorLightGrey"
    tools:context="tcss450.uw.edu.aboutme.MainActivity"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/textButton"
            android:text="@string/textStr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_config"
            android:onClick="sendTextMessage"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_spacer_margin"/>

        <Button
            android:id="@+id/imageButton"
            android:text="@string/imageStr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_config"
            android:onClick="sendImageMessage" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_spacer_margin" />

        <Button
            android:id="@+id/webButton"
            android:text="@string/webStr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_config"
            android:onClick="sendWebMessage" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_spacer_margin" />

        <Button
            android:id="@+id/toastButton"
            android:text="@string/toastStr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_config"
            android:onClick="sendToastMessage" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_spacer_margin" />

        <Button
            android:id="@+id/dialogButton"
            android:text="@string/dialogStr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_config"
            android:onClick="sendDialogMessage" />
    </LinearLayout>

</RelativeLayout>
